@@ -6,18 +6,19 @@
 
     <groupId>io.xdag</groupId>
     <artifactId>xdagj</artifactId>
-    <version>0.4.5</version>
+    <version>0.4.7</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
-        <kotlin.version>1.4.20</kotlin.version>
+        <kotlin.version>1.5.31</kotlin.version>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <dist.phase>package</dist.phase>
         <dist.base>${project.basedir}/dist</dist.base>
         <!-- netty -->
-        <netty.version>4.1.70.Final</netty.version>
+        <netty.version>4.1.74.Final</netty.version>
+        <surefire.test.excludes>**/*RandomXSyncTest.java</surefire.test.excludes>
     </properties>
 
     <organization>
@@ -58,6 +59,10 @@
             <id>jvm-libp2p</id>
             <url>https://dl.cloudsmith.io/public/libp2p/jvm-libp2p/maven/</url>
         </repository>
+        <repository>
+            <id>hyperledger.jfrog.io</id>
+            <url>https://hyperledger.jfrog.io/artifactory/besu-maven/</url>
+        </repository>
     </repositories>
 
     <pluginRepositories>
@@ -73,13 +78,47 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.9.0</version>
                 <configuration>
-                    <source>15</source>
-                    <target>15</target>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                    <fork>true</fork>
+                    <meminitial>1024m</meminitial>
+                    <maxmem>2048m</maxmem>
                     <skip>false</skip>
                 </configuration>
             </plugin>
+
+            <!-- cmake on maven compile -->
+            <plugin>
+                <groupId>com.googlecode.cmake-maven-project</groupId>
+                <artifactId>cmake-maven-plugin</artifactId>
+                <version>3.22.1-b1</version>
+                <executions>
+                    <execution>
+                        <id>cmake-generate</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <sourcePath>${project.basedir}/src/c</sourcePath>
+                            <targetPath>${project.basedir}/src/c/build</targetPath>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>cmake-compile</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                        <configuration>
+                            <projectDirectory>${project.basedir}/src/c/build</projectDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
 
             <!-- testing -->
             <plugin>
@@ -87,7 +126,10 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
-                    <argLine>--enable-preview -Xmx1024m</argLine>
+                    <argLine>-Xmx1024m</argLine>
+                    <excludes>
+                        <exclude>${surefire.test.excludes}</exclude>
+                    </excludes>
                 </configuration>
             </plugin>
 
@@ -236,6 +278,8 @@
                                         tofile="${dist.base}/windows/xdag-mainnet.config"/>
                                 <copy file="src/main/resources/xdag-testnet.config"
                                         tofile="${dist.base}/windows/xdag-testnet.config"/>
+                                <copy file="src/main/resources/xdag-devnet.config"
+                                        tofile="${dist.base}/windows/xdag-devnet.config"/>
                                 <copy file="${project.basedir}/script/xdag.bat"
                                         tofile="${dist.base}/windows/xdag.bat"/>
                                 <zip basedir="${dist.base}/windows/"
@@ -251,6 +295,8 @@
                                         tofile="${dist.base}/linux/xdag-mainnet.config"/>
                                 <copy file="src/main/resources/xdag-testnet.config"
                                         tofile="${dist.base}/linux/xdag-testnet.config"/>
+                                <copy file="src/main/resources/xdag-devnet.config"
+                                        tofile="${dist.base}/linux/xdag-devnet.config"/>
                                 <copy file="${project.basedir}/script/xdag.sh"
                                         tofile="${dist.base}/linux/xdag.sh"/>
                                 <chmod file="${dist.base}/linux/xdag.sh" perm="755"/>
@@ -267,6 +313,8 @@
                                         tofile="${dist.base}/macos/xdag-mainnet.config"/>
                                 <copy file="src/main/resources/xdag-testnet.config"
                                         tofile="${dist.base}/macos/xdag-testnet.config"/>
+                                <copy file="src/main/resources/xdag-devnet.config"
+                                        tofile="${dist.base}/macos/xdag-devnet.config"/>
                                 <copy file="${project.basedir}/script/xdag.sh"
                                         tofile="${dist.base}/macos/xdag.sh"/>
                                 <chmod file="${dist.base}/macos/xdag.sh" perm="755"/>
@@ -300,41 +348,35 @@
 
     <dependencies>
         <dependency>
-            <groupId>fr.acinq.bitcoin</groupId>
-            <artifactId>secp256k1-jni</artifactId>
-            <version>1.3</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>16.0.1</version>
+            <version>22.0.0</version>
         </dependency>
 
         <!-- Logging framework -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.13.3</version>
+            <version>2.17.2</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.13.3</version>
+            <version>2.17.2</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.13.3</version>
+            <version>2.17.2</version>
         </dependency>
 
         <!-- Apache Commons -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.11</version>
+            <version>3.12.0</version>
         </dependency>
 
         <dependency>
@@ -352,19 +394,37 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.8.0</version>
+            <version>2.11.0</version>
         </dependency>
 
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
-            <version>1.4</version>
+            <version>1.5.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-configuration2</artifactId>
+            <version>2.7</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-lang3</artifactId>
+                    <groupId>org.apache.commons</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.4</version>
         </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>31.0.1-jre</version>
+            <version>31.1-jre</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.google.errorprone</groupId>
@@ -384,7 +444,7 @@
         <dependency>
             <groupId>com.esotericsoftware</groupId>
             <artifactId>kryo</artifactId>
-            <version>5.2.0</version>
+            <version>5.3.0</version>
         </dependency>
 
         <dependency>
@@ -463,31 +523,35 @@
                     <artifactId>kotlin-stdlib-common</artifactId>
                     <groupId>org.jetbrains.kotlin</groupId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>kotlin-stdlib-jdk8</artifactId>
+                    <groupId>org.jetbrains.kotlin</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
 
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
-            <version>2.8.6</version>
+            <version>3.0.5</version>
         </dependency>
 
         <dependency>
             <groupId>org.jline</groupId>
             <artifactId>jline</artifactId>
-            <version>3.16.0</version>
+            <version>3.21.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.jupnp</groupId>
             <artifactId>org.jupnp.support</artifactId>
-            <version>2.5.2</version>
+            <version>2.6.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.jupnp</groupId>
             <artifactId>org.jupnp</artifactId>
-            <version>2.5.2</version>
+            <version>2.6.0</version>
         </dependency>
 
         <dependency>
@@ -500,7 +564,7 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>4.8.1</version>
+            <version>4.9.3</version>
             <exclusions>
                 <exclusion>
                     <artifactId>annotations</artifactId>
@@ -520,7 +584,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>4.0.0</version>
+            <version>4.3.1</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -546,50 +610,106 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.19.0</version>
+            <version>3.22.0</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
-            <version>5.4.4</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.apache.tuweni</groupId>
-            <artifactId>bytes</artifactId>
-            <version>1.3.0</version>
+            <artifactId>tuweni-bytes</artifactId>
+            <version>2.1.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.google.guava</groupId>
                     <artifactId>guava</artifactId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>kotlin-stdlib</artifactId>
+                    <groupId>org.jetbrains.kotlin</groupId>
                 </exclusion>
             </exclusions>
         </dependency>
 
         <dependency>
             <groupId>org.apache.tuweni</groupId>
-            <artifactId>units</artifactId>
-            <version>1.3.0</version>
+            <artifactId>tuweni-units</artifactId>
+            <version>2.1.0</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>guava</artifactId>
+                    <groupId>com.google.guava</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.tuweni</groupId>
+            <artifactId>tuweni-io</artifactId>
+            <version>2.1.0</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>guava</artifactId>
+                    <groupId>com.google.guava</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>commons-codec</artifactId>
+                    <groupId>commons-codec</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hyperledger.besu.internal</groupId>
+            <artifactId>crypto</artifactId>
+            <version>1.4.5-RC1</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>bcprov-jdk15on</artifactId>
+                    <groupId>org.bouncycastle</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>guava</artifactId>
+                    <groupId>com.google.guava</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>log4j-api</artifactId>
+                    <groupId>org.apache.logging.log4j</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>log4j-core</artifactId>
+                    <groupId>org.apache.logging.log4j</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>tuweni-bytes</artifactId>
+                    <groupId>org.apache.tuweni</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>tuweni-units</artifactId>
+                    <groupId>org.apache.tuweni</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>vertx-core</artifactId>
+                    <groupId>io.vertx</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
-            <version>1.68</version>
+            <version>1.70</version>
         </dependency>
 
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcpkix-jdk15on</artifactId>
-            <version>1.68</version>
+            <version>1.70</version>
         </dependency>
 
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-core</artifactId>
-            <version>3.8.0</version>
+            <version>4.2.5</version>
             <exclusions>
                 <exclusion>
                     <groupId>io.netty</groupId>
@@ -655,27 +775,33 @@
         </dependency>
 
         <dependency>
+            <groupId>com.github.jnr</groupId>
+            <artifactId>jnr-ffi</artifactId>
+            <version>2.2.11</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.12.2</version>
+            <version>2.13.1</version>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.12.2</version>
+            <version>2.13.1</version>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.12.2</version>
+            <version>2.13.1</version>
         </dependency>
 
         <dependency>
             <groupId>tech.pegasys.discovery</groupId>
             <artifactId>discovery</artifactId>
-            <version>0.4.6</version>
+            <version>0.4.7</version>
             <exclusions>
                 <exclusion>
                     <artifactId>log4j-api</artifactId>
@@ -725,6 +851,18 @@
                     <artifactId>jnr-ffi</artifactId>
                     <groupId>com.github.jnr</groupId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>vertx-core</artifactId>
+                    <groupId>io.vertx</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>bytes</artifactId>
+                    <groupId>org.apache.tuweni</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>units</artifactId>
+                    <groupId>org.apache.tuweni</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
 
@@ -759,24 +897,12 @@
         <dependency>
             <groupId>com.sun.xml.ws</groupId>
             <artifactId>jaxws-ri</artifactId>
-            <version>2.3.0</version>
+            <version>2.3.3</version>
             <type>pom</type>
             <exclusions>
                 <exclusion>
-                    <artifactId>stax-ex</artifactId>
-                    <groupId>org.jvnet.staxex</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>jaxb-api</artifactId>
-                    <groupId>javax.xml.bind</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>jaxws-eclipselink-plugin</artifactId>
-                    <groupId>com.sun.xml.ws</groupId>
-                </exclusion>
-                <exclusion>
-                    <artifactId>sdo-eclipselink-plugin</artifactId>
-                    <groupId>com.sun.xml.ws</groupId>
+                    <artifactId>jakarta.activation</artifactId>
+                    <groupId>com.sun.activation</groupId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -793,13 +919,19 @@
         <dependency>
             <groupId>org.lmdbjava</groupId>
             <artifactId>lmdbjava</artifactId>
-            <version>0.8.1</version>
+            <version>0.8.2</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jnr-ffi</artifactId>
+                    <groupId>com.github.jnr</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.agrona/agrona -->
         <dependency>
             <groupId>org.agrona</groupId>
             <artifactId>agrona</artifactId>
-            <version>1.10.0</version>
+            <version>1.14.0</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.xerial.snappy/snappy-java -->
@@ -808,7 +940,6 @@
             <artifactId>snappy-java</artifactId>
             <version>1.1.8.4</version>
         </dependency>
-
 
     </dependencies>
 
